revert removing MaxPermSize param because it might be necessary for running sbt under JDK7 address review SCL-CR-442